# cocl-upstream

./: Cargo.toml  Containerfile  Makefile  PROJECT  REUSE.toml  go.mod  go.sum
.github/: dependabot.yml
.github/workflows/: go.yml  lint.yml  reuse-lint.yml  rust.yml
.tekton/: cocl-operator-pull-request.yaml  cocl-operator-push.yaml  compute-pcrs-pull-request.yaml  compute-pcrs-push.yaml  registration-server-pull-request.yaml  registration-server-push.yaml
api/: trusted-cluster-gen.go
api/v1alpha1/: conditions.go  crds.go
cmd/: main.go
compute-pcrs/: Cargo.toml  Containerfile
compute-pcrs/src/: lib.rs  main.rs
config/crd/: trusted-execution-clusters.io_approvedimages.yaml  trusted-execution-clusters.io_machines.yaml  trusted-execution-clusters.io_trustedexecutionclusters.yaml
config/deploy/: approved_image_cr.yaml  operator.yaml  trusted_execution_cluster_cr.yaml
examples/: vm-coreos-ign.yaml
kind/: config.yaml  kbs-forward.yaml  register-forward.yaml
lib/: Cargo.toml
lib/src/: conditions.rs  kopium.rs  lib.rs  reference_values.rs  vendor_kopium.rs
lib/src/kopium/: approvedimages.rs  machines.rs  trustedexecutionclusters.rs
lib/src/vendor_kopium/: virtualmachineinstances.rs  virtualmachines.rs
operator/: Cargo.toml
register-server/: Cargo.toml  Containerfile
scripts/: clean-cluster-kind.sh  common.sh  create-cluster-kind.sh  delete-cluster-kind.sh  generate-bundle-prod.sh  install-kubevirt.sh  kubeconfig.sh
test_utils/: Cargo.toml
tests/: Cargo.toml  README.md  attestation.rs  equal_conditions.rs  trusted_execution_cluster.rs
(+34 files in other folders)
