# SPDX-FileCopyrightText: Alice Frosi <afrosi@redhat.com>
# SPDX-FileCopyrightText: Jakob Naucke <jnaucke@redhat.com>
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "trusted-cluster-operator-lib"
version = "0.1.0"
description = "Definitions shared across operator, compute-pcrs and register-server"
edition.workspace = true
rust-version.workspace = true

[dependencies]
compute-pcrs-lib.workspace = true
k8s-openapi.workspace = true
kube.workspace = true
serde.workspace = true
serde_json.workspace = true
